# hdfs-cli

./: .gitignore  .travis.yml  Cargo.toml  readme.md
build_utils/: googletest.sh  kcov.sh  libhdfs3.sh
fs_test/: Cargo.toml
fs_test/src/: lib.rs
hdfs/: Cargo.toml  build.rs
hdfs-cmd/: Cargo.toml
hdfs-cmd/src/: cli.yml  config.rs  err.rs  main.rs  walk_hdfs.rs
hdfs/src/: conf.rs  config.rs  err.rs  hdfs.rs  lib.rs  native.rs  util.rs
testhdfs/: Cargo.toml  build.rs
testhdfs/src/: main.rs
utils/: build_deps.sh
walk/: Cargo.toml
walk/src/: err.rs  filter.rs  lib.rs  linuxfs.rs  tests.rs  walk.rs
