[package]
name = "hdfs-cmd"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]

[dependencies]
hdfs = { path = "../hdfs" }
walk = { path = "../walk" }
env_logger = "0.5"
clap = {version= "2.32", features = ["yaml"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4"
dirs = "1.0"