[package]
name = "hdfs"
version = "0.1.0"
authors = ["Charles Roussel <c.roussel@criteo.com>"]
build= "build.rs"

[lib]
name = "hdfs"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
log = "0.4"
itertools = "0.7"
quick-xml = "0.13"
nix = "0.11"
fs_test= { path = "../fs_test" }

[build-dependencies]
gcc = "0.3.55"